# compression-pithy

./: CHANGELOG.md  compression-pithy.cabal  flake.nix  pithy.cabal
cbits/pithy/: pithy.c
src/Compression/: Internal.hs  Pithy.hs  Raw.hs
