cabal-version:      2.4
name:               compression-pithy
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ailrk
maintainer:         jimmy123good@hotmail.com


-- A copyright notice.
-- copyright:
-- category:
extra-source-files: cbits/pithy.h

library
    exposed-modules:
      Compression.Raw
      Compression.Internal
      Compression.Pithy

    -- Modules included in this library but not exported.
    -- other-modules:

    build-depends:
          base >=4.16.0.0
        , bytestring
    hs-source-dirs:   src

    c-sources:        cbits/pithy.c

    include-dirs:     cbits
    Includes:         pithy.h

    default-language: Haskell2010
